src/scss/components/landing/hero/title-area/_title-area.scss
/* _title-area.scss */

/* HeroTitleAreaContainer */
@mixin button($color) {
  position: relative;
  display: block;
  width: 143px;
  height: 46px;
  border: 1px solid #6f6fe8;
  box-sizing: border-box;
  box-shadow: 0 2px 4px rgba(191, 191, 191, 0.7);
  border-radius: 26px;
  background-color: $color;
  margin: 0.5em;
  text-decoration: none;
  z-index: 1;
  transition: background-color 0.5s ease-out;
  &:hover {
    background: #5555cf;
    transition: background-color 0.5s ease-in;
  }
  @include respond(phone-narrow) {
    width: 140px;
    margin: 0.25em;
  }
}

.hero-title-area {
  white-space: nowrap;
  position: absolute;
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: center;
  left: 115px;
  top: 275px;

  &__title-text {
    @include font-source-header(
      39px,
      46px,
      0.04em,
      3px,
      center,
      normal,
      bold,
      #222222
    );
    mix-blend-mode: normal;
    @include responsive-font(3vw, 32px, 39px);
  }

  &__slogan {
    text-align: right;
  }

  &__slogan-text {
    @include font-source-body(
      22px,
      28px,
      0.06em,
      3px,
      false,
      false,
      500,
      #9e9eff
    );
    @include responsive-font(1.75vw, 18px, 22px);
  }

  &__eventInfo {
    position: absolute;
    text-align: left;
    left: 0;
    // top: 152px;
    top: 194px;
    @include respond(phone-narrow) {
      top: 169px;
    }
  }

  &__eventInfo-text {
    @include font-source-body(
      14px,
      14px,
      0.04em,
      3px,
      false,
      false,
      false,
      #adadad
    );
    position: absolute;
    width: 22vw;
    height: 64px;
    white-space: nowrap;
    @include responsive-font(2.5vw, 13.5px, 14px);
  }

  &__button-container {
    display: flex;
    flex-direction: row;
    height: 40em;
    align-self: flex-start;
  }
  &__sponsor-button {
    @include button(#6f6fe8);
    @include respond(phone-narrow) {
      top: 200px;
    }
    left: 0;
    // top: 266px;
    top: 225px;
  }
  &__2019-button {
    @include button(#ffffff);
    @include respond(phone-narrow) {
      top: 200px;
    }
    left: 0;
    // top: 266px;
    top: 225px;
  }
  &__2019-button-text {
    position: relative;
    @include font-source-body(
      14px,
      18px,
      0.07em,
      3px,
      center,
      false,
      false,
      #6f6fe8
    );
    text-align: center;
    width: 143px;
    height: 50px;
    bottom: 18px;
    z-index: 2;
    transition: color 0.5s ease-out;
    @include responsive-font(2.5vw, 13.5px, 14px);
    &:hover {
      color: #ffffff;
      transition: color 0.5s ease-in;
    }
  }
  &__sponsor-button-text {
    position: relative;
    @include font-source-body(
      0.95em,
      18px,
      0.07em,
      0,
      center,
      false,
      false,
      #fffefe
    );
    bottom: 1px;
    text-align: center;
  }
}

/* Email Subscription Input Container */
div.hero-subscribe-to-email-list-container {
  // height: 46px;
  height: 45%;
  width: 100%;

  display: flex;
  flex-flow: column nowrap;
  align-items: flex-end;
  position: absolute;
  left: 0;
  top: 105px;
  text-align: center;

  input[type='email'] {
    all: unset;
    // height: 100%;
    min-width: 12em;
    border-bottom: 1px solid #adadad;
    margin-bottom: 5%;
    @include font-source-body(
      14px,
      false,
      0.04em,
      1px,
      false,
      false,
      false,
      #adadad
    );
  }

  #emailInput.placeholder-sending::placeholder {
    color: #adadad;
    @include responsive-font(1vw, 13.5px, 14px);
    font-style: oblique;
  }

  #emailInput.placeholder-ok::placeholder {
    color: #9ea0ff;
  }

  #emailInput.placeholder-error::placeholder {
    color: red;
  }

  button[type='submit'] {
    all: unset;
    // height: 100%;
    background-color: #6f6fe8;
    border-radius: 23px 23px 23px 23px;
    // padding: 0 14px 0 10px;
    padding: 8px 8px 8px 8px;
    // padding-top: 10px;
    // padding-bottom: 10px;
    box-shadow: 0 2px 6px #bfbfbf;
    // align-self: center;
    @include font-source-body(
      12px,
      18px,
      0.07em,
      3px,
      center,
      false,
      false,
      #fffefe
    );
    cursor: pointer;
    display: block;
    margin: 0 0 0 auto;
    &:hover {
      background: #5555cf;
      transition: background 0.5s ease-in;
      transition: background 0.5s ease-out;
    }
  }
}

/* NavigateToBottomContainer */

.navigate-to-bottom-container {
  position: absolute;
  left: -16px;
  // top: 362px;
  top: 394px;
  width: 66px;
  height: 66px;
  cursor: pointer;
}

.navigate-to-bottom-outer-circle {
  position: absolute;
  left: 0;
  top: 0;
}

.navigate-to-bottom-middle-circle {
  position: absolute;
  left: 11px;
  top: 11px;
}

.navigate-to-bottom-inner-circle {
  position: absolute;
  left: 21px;
  top: 21px;
}

.navigate-to-bottom-arrow {
  position: absolute;
  left: 25px;
  top: -5px;
}

